--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 </head>
 
 <body>
-  <h1>brandon coleman</h1>
-  </ui>
+  <h1>Brandon Coleman</h1>
+  <nav></nav>
+  <u1>
+    <li>first assignment </li>
+  </u1>
   <nav> hamburger 
 
   </nav>
