--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
   <h1>Brandon Coleman</h1>
-  <nav></nav>
+  <nav>
   <u1>
-    <li>first assignment </li>
+    <li><a  href="prototype/index.html"> first assignment<a></a>/li>
   </u1>
   <nav> hamburger 
 
